--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.52.1",
+		"react-icons": "^5.2.1",
 		"react-resizable-panels": "^2.0.20",
+		"react-router": "6",
+		"react-router-dom": "6",
 		"recharts": "^2.12.7",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.4.0",
