--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "countries-catalog",
 	"private": true,
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
@@ -55,8 +55,8 @@
 		"react-hook-form": "^7.52.1",
 		"react-icons": "^5.2.1",
 		"react-resizable-panels": "^2.0.20",
-		"react-router": "6",
-		"react-router-dom": "6",
+		"react-router": "^6.24.1",
+		"react-router-dom": "^6.24.1",
 		"recharts": "^2.12.7",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.4.0",
@@ -69,16 +69,16 @@
 		"@types/node": "^20.14.10",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
-		"@typescript-eslint/eslint-plugin": "^7.13.1",
-		"@typescript-eslint/parser": "^7.13.1",
-		"@vitejs/plugin-react-swc": "^3.5.0",
+		"@typescript-eslint/eslint-plugin": "^7.16.0",
+		"@typescript-eslint/parser": "^7.16.0",
+		"@vitejs/plugin-react-swc": "^3.7.0",
 		"autoprefixer": "^10.4.19",
 		"dependency-cruiser": "^16.3.6",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-react-hooks": "^4.6.2",
-		"eslint-plugin-react-refresh": "^0.4.7",
+		"eslint-plugin-react-refresh": "^0.4.8",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.7",
 		"postcss": "^8.4.39",
@@ -86,8 +86,8 @@
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"sass": "^1.77.7",
 		"tailwindcss": "^3.4.4",
-		"typescript": "^5.2.2",
-		"vite": "^5.3.1"
+		"typescript": "^5.5.3",
+		"vite": "^5.3.3"
 	},
 	"lint-staged": {
 		"**/*.{js,ts,json,jsx,tsx}": ["prettier --write --config .prettierrc.cjs"]
