--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
+		"@million/lint": "1.0.0-rc.76",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-alert-dialog": "^1.1.1",
 		"@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -39,6 +40,7 @@
 		"@radix-ui/react-toggle": "^1.1.0",
 		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
+		"@t3-oss/env-core": "^0.10.1",
 		"@tanstack/react-query": "^5.50.1",
 		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
