--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
+		"predeploy": "pnpm build",
+		"up": "pnpm gh-pages -d build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
 		"cruise": "pnpm depcruise src -p --exclude vite-env.d.ts"
@@ -13,6 +15,7 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
 		"@million/lint": "1.0.0-rc.76",
+		"@nanostores/react": "^0.7.2",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-alert-dialog": "^1.1.1",
 		"@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -50,6 +53,7 @@
 		"embla-carousel-react": "^8.1.6",
 		"input-otp": "^1.2.4",
 		"lucide-react": "^0.407.0",
+		"nanostores": "^0.10.3",
 		"next-themes": "^0.3.0",
 		"react": "^18.3.1",
 		"react-day-picker": "^8.10.1",
@@ -63,6 +67,7 @@
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwindcss-animate": "^1.0.7",
+		"usehooks-ts": "^3.1.0",
 		"vaul": "^0.9.1",
 		"zod": "^3.23.8"
 	},
@@ -81,6 +86,7 @@
 		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.8",
+		"gh-pages": "^6.1.1",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.7",
 		"postcss": "^8.4.39",
